--- a/style.css
+++ b/style.css
@@ -19,3 +19,9 @@
 #city-form {
   text-align: center;
 }
+
+@media only screen and (min-width: 320px) and (max-width: 665px) {
+  .city-text {
+    font-size: 2.5rem;
+  }
+}
